# arabizi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Cargo.toml  entitlements.plist  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: main.rs
app/ui/: CHANGELOG.json  index.html  onboarding.html
engine/: Cargo.toml
engine/scripts/: build_tashkeela.py
engine/src/: cldr_ar.rs  dictionary.rs  emoji.rs  engine.rs  frequency.rs  lib.rs  mappings.rs  tashkeela.rs  user_prefs.rs
src/: dictionary.rs  engine.rs  lib.rs  main.rs  mappings.rs
