[package]
name = "arabizi-app"
version = "0.1.0"
edition = "2024"

[dependencies]
arabizi-engine = { path = "../engine" }
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
window-vibrancy = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"

# Windows-only deps
[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[build-dependencies]
tauri-build = { version = "2", features = [] }
